tabs: fix the overflow issues

--- a/client/src/Map/index.scss
+++ b/client/src/Map/index.scss
@@ -96,6 +96,7 @@ button:active {
   }
   & > div {
     padding-bottom: 1em;
+    background: #fff;
   }
   & a {
     color: #b9242e;
